--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자취생들을 위한 레시피 북</title>
+    <link rel="icon" href="icon.png" type="image/png" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
